force-app/main/default/objects/BEACON_Activation_Message__e/BEACON_Activation_Message__e.object-meta.xml
<CustomObject>
    <label>BEACON Activation Message</label>
    <pluralLabel>BEACON Activation Messages</pluralLabel>
</CustomObject>