force-app/main/default/objects/BEACON_Activation_Message__e/fields/Modem__c.field-meta.xml
<CustomField>
    <fullName>Modem__c</fullName>
    <label>Modem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>