force-app/main/default/objects/BEACON_Activation_Message__e/fields/Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>Signal_Strength__c</fullName>
    <label>Signal Strength</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>